feat: account screen followers list (#406)
* feat(account): #265 followers screen

* fix: remove 👻 with explicit message

* fix: component at the top of the file

--- a/packages/i18n/src/app/en.json
+++ b/packages/i18n/src/app/en.json
@@ -51,6 +51,10 @@
     "defaultMessage": "Border color",
     "description": "Title of the border color picker in carousel edition"
   },
+  "0OPgK9": {
+    "defaultMessage": "Save",
+    "description": "Edit email address modal save button label"
+  },
   "106q2H": {
     "defaultMessage": "Background",
     "description": "Carousel  bottom menu label for Background tab"
@@ -86,6 +90,10 @@
   "1w+lKH": {
     "defaultMessage": "Margin Bottom : {size}",
     "description": "marginBottom message in SimpleButton edition"
+  },
+  "26s2Jf": {
+    "defaultMessage": "No followers",
+    "description": "Message displayed in the followers screen when the user has no followers"
   },
   "2EoPMO": {
     "defaultMessage": "Mobile",
@@ -462,6 +470,10 @@
   "Eoy6Sp": {
     "defaultMessage": "Slide to change the vertical spacing",
     "description": "Hint of the vertical spacing slider in simple text edition"
+  },
+  "EuXG9F": {
+    "defaultMessage": "Followers",
+    "description": "Title of the screen listing followers"
   },
   "EvEO4G": {
     "defaultMessage": "Height : {size}",
@@ -1271,6 +1283,10 @@
     "defaultMessage": "Background",
     "description": "Simple text  bottom menu label for Background tab"
   },
+  "hSV0Sf": {
+    "defaultMessage": "Please enter a valid email address",
+    "description": "Error message when the user enters an invalid email address"
+  },
   "hc+1uI": {
     "defaultMessage": "Allow Azzapp to access your microphone",
     "description": "Camera authorization screen title for microphobe permission"
@@ -1346,6 +1362,10 @@
   "k2pUu2": {
     "defaultMessage": "Bottom to top",
     "description": "Label of the bottom to top orientation in cover edition"
+  },
+  "k3hj2G": {
+    "defaultMessage": "Cancel",
+    "description": "Edit email address modal cancel button label"
   },
   "kIhbvL": {
     "defaultMessage": "Height",
